# cloud-security-copilot

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  debug_timing.py  docker-compose.yml  implementation_plan.md  main.py  package-lock.json  package.json  pad_image.py  patch_inject_chaos.py  patch_inject_drift.py  phase4_import_diag.txt  phase4_out.txt  phase4_pytest_output.txt  phase4_raw.txt  phase4_run_output.txt  phase4_temporal_audit_report.txt  phase8_armor_integrity_report.md  phase8_runtime_results.json  pyproject.toml  quick_err.txt  quick_exit.txt  quick_out.txt  quick_verify.py  quick_verify_output.txt  render.yaml  requirements.txt  run_phase4_audit.py  sovereign_core_test.py  sovereign_safety_report.md  sovereign_stress_test.py  sovereignty_report.txt  syn_check.txt  test_output.txt  tmp_check.txt  update_mem_svc.py  verify_output.txt  verify_phase1.py  (+3 more)
agent/: copilot.py
api/: findings.py  score.py
cloudgaurd/: package-lock.json  package.json
cloudguard/: __init__.py  app.py
cloudguard/agents/: __init__.py  audit_surgeon.py  sentry_node.py  swarm.py
cloudguard/api/: __init__.py  auto_stepper.py  narrative_engine.py  routes.py  streamer.py
cloudguard/core/: __init__.py  audit_reporter.py  clock.py  collision_manager.py  decision_logic.py  math_engine.py  remediation.py  scheduler.py  schemas.py  (+2 more)
data/: sample_data.json
elastic/: client.py  indexer.py  queries.py
engine/: scorer.py
tests/: test_copilot.py  test_hmem_amnesia_cure.py  test_phase1.py  test_phase2_stress.py  test_phase4_validation_suite.py  test_routing.py
(+50 files in other folders)
