[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudguard-b"
version = "0.1.0"
description = "GenAI-Powered Autonomous Cloud Governance — Phase 1 Foundation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Mustafa Hussain"},
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "networkx>=3.2.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
postgres = ["asyncpg>=0.30.0", "psycopg2-binary>=2.9.0"]
full = [
    "redis>=5.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "elasticsearch>=8.12.0",
    "boto3>=1.34.0",
    "faker>=23.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["cloudguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
